# portfolio-fred-chauvet

./: .gitignore  AGENTS.md  CODEBASE.md  README.md  build_log.txt  build_log_cleanup.txt  error.html  eslint.config.mjs  generate_skills.ps1  lint_output.txt  log.txt  manim_scene.py  next.config.mjs  package-lock.json  package.json  parse_skills.js  remaining_subtitles.txt  remaining_subtitles_wrapped.txt  reorientation_video.py  replaceColors.js  skills.md  subtitles.txt  subtitles.vtt  tsconfig.tsbuildinfo
.agents/: skills.json
.agents/mcp-server/: README.md  __init__.py  __main__.py  pyproject.toml  server.py
.agents/rules/: ionicv.md
.agents/workflows/: ionic.md
.data/: analytics.sqlite-shm  analytics.sqlite-wal
.legacy-portfolio/: about.html  audit_final_result.txt  audit_final_result_v2.txt  audit_results.txt  build_log.txt  contact.html  cv.html  expertise.html  extract.js  fix-html.js  gestion-cookies.html  index.html  mentions-legales.html  package-lock.json  package.json  politique-confidentialite.html  projets.html  ux_audit_result.txt  ux_audit_result_v2.txt  ux_audit_result_v3.txt  ux_audit_result_v4.txt  ux_audit_result_v5.txt  vite-error.txt  vite.config.ts
.legacy-portfolio/public/: Bureau - Raccourci.lnk
.legacy-portfolio/src/: App.css  App.tsx  index.css
docs/references/: veo-3-prompting-guide.md
public/data/: osint.json
public/images/: Fred-avatar.html
scripts/: generate-osint-data.mjs
src/app/: HomeContent.tsx  globals.css  layout.tsx  page.tsx  robots.ts  robots.txt  sitemap.ts  template.tsx
src/components/: AtriumScene.tsx  (+27 more)
(+78 files in other folders)
